--- a/assets/main.css
+++ b/assets/main.css
@@ -21,14 +21,14 @@ body {
 h1 {
     color: var(--secondColor);
     font-size: 3em;
-    margin:0;
+    margin: .5em;
     padding:0;
 }
 
 h2 {
     font-size: 1.5em;
     color: var(--fourthColor);
-    margin:0;
+    margin: 0;
     padding:0;
 }
 
@@ -39,8 +39,20 @@ h3 {
     padding:0;
 }
 
+h4 {
+    font-size: .8em;
+}
+
+h5 {
+    font-size: .6em;
+    margin: 1px;
+}
+
 p{
     font-size: 1em;
+}
+.img-fluid {
+    height: 400px;
 }
 
 a {
@@ -50,30 +62,26 @@ a:hover {
     color: var(--highlight);
     text-decoration: none;
 }
-img {
-    width: 80%;
+.poster img {
+    margin-right: 1em;
 }
 .movie-container{
-    display: flex;
-    flex-wrap: wrap;
-    max-height: 400px;
+    border-radius: 20px;
     width: 100%; 
     padding: .5em;
-    justify-content: center;
 }
 .poster {
-    border: 2px solid var(--secondColor);
-    border-radius: .5em;
-    width: 20%;
     padding: 1em;
     background-color: var(--thirdColor);
-    margin: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    min-height: 350px;
+    display: flex;
 }
 .movie-title {
-    height: 50px;
-    padding: 20px;
+    padding: 5px;
+    font-size: 1em;
+}
+.movie-overview{
+    font-size: .75em;
 }
 
 
@@ -143,6 +151,7 @@ nav li:first-child {
 }
 /* Footer Styles */
 footer {
+    margin-top: 2em;
     background-color: var(--thirdColor);
     text-align: left;
     padding: 2rem 0;
